# OpenTimer

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
benchmark/ac97_ctrl/: ac97_ctrl.ops  ac97_ctrl.output  ac97_ctrl.sdc  ac97_ctrl.shell  ac97_ctrl.tau2015  ac97_ctrl.timing  ac97_ctrl.v  ac97_ctrl_Early.lib  ac97_ctrl_Late.lib  change_1.spef  change_2.spef  change_3.spef  change_4.spef  change_6.spef  change_7.spef
benchmark/aes_core/: aes_core.ops  aes_core.output  aes_core.sdc  aes_core.shell  aes_core.tau2015  aes_core.timing  aes_core.v  aes_core_Early.lib  aes_core_Late.lib  change_1.spef  change_2.spef  change_3.spef  change_4.spef  change_6.spef  change_7.spef
benchmark/c1355/: c1355.ops  c1355.output  c1355.sdc  c1355.shell  c1355.spef  c1355.tau2015  c1355.timing  c1355.v  c1355_Early.lib  c1355_Late.lib  change_1.spef  change_2.spef  change_3.spef  change_4.spef  change_5.spef  change_6.spef  change_7.spef
benchmark/c17/: c17.ops  c17.output  c17.shell  c17_Late.lib  change_1.spef  change_2.spef  change_3.spef  change_4.spef  change_5.spef  change_6.spef  change_7.spef
benchmark/c17_slack/: c17_slack.ops  c17_slack.output  c17_slack.sdc  c17_slack.shell  c17_slack.spef  c17_slack.tau2015  c17_slack.v  c17_slack_Early.lib  c17_slack_Late.lib  change_1.spef  change_2.spef  change_3.spef  change_4.spef  change_5.spef  change_6.spef  change_7.spef
benchmark/c1908/: c1908.ops  c1908.output  c1908.sdc  c1908.shell  c1908.spef  c1908.tau2015  c1908.timing  c1908.v  c1908_Early.lib  c1908_Late.lib  change_1.spef  change_2.spef  change_3.spef  change_4.spef  change_5.spef  change_6.spef  change_7.spef
benchmark/c2670/: c2670.ops  c2670.output  c2670.sdc  c2670.shell  c2670.spef  c2670.tau2015  c2670.timing  c2670.v  c2670_Early.lib  c2670_Late.lib  change_1.spef  change_2.spef  change_3.spef  change_4.spef  change_5.spef  change_6.spef  change_7.spef
benchmark/c3540/: c3540.ops  c3540.output  c3540.sdc  c3540.shell  c3540.spef  c3540.tau2015  c3540.timing  c3540.v  c3540_Early.lib  c3540_Late.lib  change_1.spef  change_2.spef  change_3.spef  change_4.spef  change_5.spef  change_6.spef  change_7.spef
benchmark/c3_path/: c3_path.ops  c3_path.output  c3_path.spef  c3_path.tau2015  c3_path.v  c3_path_Early.lib  c3_path_Late.lib  change_1.spef  change_2.spef  change_4.spef
benchmark/c3_slack/: c3_slack.ops  c3_slack.output  c3_slack.sdc  c3_slack.shell  c3_slack.spef  c3_slack.tau2015  c3_slack.timing  c3_slack.v  c3_slack_Early.lib  c3_slack_Late.lib  change_3.spef  change_5.spef  change_6.spef  change_7.spef
benchmark/c432/: c432.ops  c432.output  c432.sdc  c432.shell  c432.spef  c432.tau2015  c432.timing  c432.v  c432_Early.lib  c432_Late.lib  change_1.spef  change_2.spef  change_3.spef  change_4.spef  change_5.spef  change_6.spef  change_7.spef
benchmark/c499/: c499.ops  c499.output  c499.sdc  c499.shell  c499.spef  c499.tau2015  c499.timing  c499.v  c499_Early.lib  c499_Late.lib  change_1.spef  change_2.spef  change_3.spef  change_4.spef  change_5.spef  change_6.spef  change_7.spef
benchmark/c5315/: c5315.ops  c5315.output  c5315.sdc  c5315.shell  c5315.spef  c5315.tau2015  c5315.timing  c5315.v  c5315_Early.lib  c5315_Late.lib  change_1.spef  change_2.spef  change_3.spef  change_4.spef  change_5.spef  change_6.spef  change_7.spef
benchmark/c6288/: c6288.ops  c6288.output  c6288.sdc  c6288.shell  c6288.spef  c6288.tau2015  c6288.timing  c6288.v  c6288_Early.lib  c6288_Late.lib  change_1.spef  change_2.spef  change_3.spef  change_4.spef  change_5.spef  change_6.spef  change_7.spef
benchmark/c7552/: c7552.ops  c7552.output  c7552.shell  c7552.spef  c7552.tau2015  c7552.v  c7552_Early.lib  c7552_Late.lib  change_1.spef  change_2.spef  change_3.spef  change_4.spef  change_5.spef  change_6.spef  change_7.spef
benchmark/c7552_slack/: c7552_slack.ops  c7552_slack.output  c7552_slack.sdc  c7552_slack.shell  c7552_slack.spef  c7552_slack.tau2015  c7552_slack.timing  c7552_slack.v  c7552_slack_Early.lib  c7552_slack_Late.lib  change_1.spef  change_2.spef  change_3.spef  change_4.spef  change_5.spef  change_6.spef  change_7.spef
benchmark/c880/: c880.ops  c880.output  c880.sdc  c880.shell  c880.spef  c880.tau2015  c880.timing  c880.v  c880_Early.lib  c880_Late.lib  change_1.spef  change_2.spef  change_3.spef  change_4.spef  change_5.spef  change_6.spef  change_7.spef
benchmark/des_perf/: change_1.spef  change_2.spef  change_3.spef  change_4.spef  change_6.spef  change_7.spef  des_perf.ops  des_perf.output  des_perf.sdc  des_perf.shell  des_perf.tau2015  des_perf.timing  des_perf_Early.lib  des_perf_Late.lib
benchmark/map9v3/: map9v3.conf  map9v3.v
benchmark/s1196/: change_1.spef  change_2.spef  change_3.spef  change_4.spef  change_5.spef  change_6.spef  change_7.spef  s1196.ops  s1196.output  s1196.sdc  s1196.shell  s1196.spef  s1196.tau2015  s1196.timing  s1196.v  s1196_Early.lib  s1196_Late.lib
benchmark/s1494/: change_1.spef  change_2.spef  change_3.spef  change_4.spef  change_5.spef  change_6.spef  change_7.spef  s1494.ops  s1494.output  s1494.sdc  s1494.shell  s1494.spef  s1494.tau2015  s1494.timing  s1494.v  s1494_Early.lib  s1494_Late.lib
benchmark/s27/: change_1.spef  change_2.spef  change_3.spef  change_4.spef  change_5.spef  s27.ops  s27.sdc  s27.shell  s27.spef  s27.tau2015  s27.timing  s27_Early.lib
benchmark/s27_path/: change_6.spef  change_7.spef  (+8 more)
doc/: CMakeLists-Subproject.template
image/: critical_path.eps  critical_path.ps  lineage.dot  pba.eps  simple_graph.dot  update_timing_simple.dot
inttest/: cmpt.py  cmpt18.py  shell.py  tau15.py  tau18.py
licenses/: cpp-prompt.license  parser-spef.license
ot/: config.hpp  config.hpp.in  exception.hpp  headerdef.hpp  policy.hpp  traits.hpp
sbin/: tau15_to_shell.sh
unittest/: path.cpp  sdc.cpp  unit.cpp  utility.cpp
wiki/: Cell-Library.md  Home.md  SPEF.md  Synopsys-Design-Constraint.md  Verilog-Netlist.md  ccsm.md  home.md  library.md  nldm.md  sdc.md  spef.md  verilog.md
(+425 files in other folders)
